--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Wicked Ass Guitars - Gear that screams</title>
+<title>Wicked Ass Guitars - Gear And Hear</title>
 <link rel="stylesheet" href="styles.css" />
 <link rel="icon" href="favicon.ico" />
 <meta name="description" content="Wicked Ass Guitars - Selling guitars, amps, mics, pickups and more." />
@@ -25,7 +25,7 @@
 
 <main>
   <section class="hero">
-    <h2>Gear that screams.</h2>
+    <h2>Gear And Hear.</h2>
     <p>Find the best guitars, amps, mics, pickups, and accessories here.</p>
   </section>
 
