--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
 
 <script>
   // TODO: Replace with your Firebase config from your Firebase project settings
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT.appspot.com",
-    messagingSenderId: "YOUR_MSG_SENDER_ID",
-    appId: "YOUR_APP_ID"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyDb5U0bC3q1zh0vwnElcF-ao7UJz9qkFhQ",
+  authDomain: "wickedassguitar.firebaseapp.com",
+  projectId: "wickedassguitar",
+  storageBucket: "wickedassguitar.appspot.com",
+  messagingSenderId: "1032631519314",
+  appId: "1:1032631519314:web:YOUR_APP_ID_HERE"
+};
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
