--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Wicked Ass Guitars - Gear And Hear</title>
+<title>Wicked Ass Auditory - Gear And Hear</title>
 <style>
-  /* Dark red/black theme */
   body {
     margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212; color: #ddd;
@@ -38,7 +37,7 @@
     flex: 1; padding: 1rem 2rem;
     max-width: 960px; margin: 0 auto;
   }
-  h2 {
+  h2, h3 {
     color: #b22222;
     margin-bottom: 1rem;
   }
@@ -86,18 +85,19 @@
     border-radius: 8px;
     color: #ddd;
     width: 90vw;
-    max-width: 400px;
+    max-width: 420px;
     max-height: 80vh;
     overflow-y: auto;
     box-shadow: 0 0 15px #b22222cc;
     z-index: 9999;
+    display: none;
   }
   #cart-overlay {
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
     background-color: rgba(0,0,0,0.7);
     z-index: 9998;
-    display: none; /* hidden by default */
+    display: none;
   }
   .cart-item {
     display: flex; justify-content: space-between; margin-bottom: 0.5rem;
@@ -164,8 +164,23 @@
     border-radius: 4px;
     cursor: pointer;
   }
-  .hidden {
-    display: none;
+  #shipping-form {
+    margin-top: 1rem;
+    background-color: #333;
+    padding: 0.8rem;
+    border-radius: 6px;
+    color: #ddd;
+  }
+  #shipping-form label {
+    display: block;
+    margin: 0.4rem 0 0.1rem;
+  }
+  #shipping-form input {
+    width: 100%;
+    padding: 0.4rem;
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 0.6rem;
   }
   footer {
     background: #1c1c1c;
@@ -181,6 +196,12 @@
   footer a:hover {
     text-decoration: underline;
   }
+  @media (max-width: 480px) {
+    #cart-section {
+      width: 95vw;
+      max-height: 90vh;
+    }
+  }
 </style>
 <link rel="icon" href="favicon.ico" />
 </head>
@@ -188,8 +209,8 @@
 
 <header>
   <div class="logo">
-    <img src="logo.svg" alt="Wicked Ass Guitars logo" />
-    <h1>Wicked Ass Guitars</h1>
+    <img src="logo.svg" alt="Wicked Ass Auditory logo" />
+    <h1>Wicked Ass Auditory</h1>
   </div>
   <nav>
     <a href="#" class="active" id="home-link">Home</a>
@@ -227,30 +248,52 @@
     </div>
   </section>
 
-  <section id="cart-section" class="hidden" role="dialog" aria-modal="true" aria-labelledby="cart-title">
+  <section id="cart-section" role="dialog" aria-modal="true" aria-labelledby="cart-title">
     <h3 id="cart-title">Your Cart</h3>
     <div id="cart-items"></div>
     <p><strong>Total: $<span id="cart-total">0.00</span></strong></p>
     <input type="text" id="promo-code-input" placeholder="Enter promo code" aria-label="Promo code" />
-    <button id="apply-promo-btn">Apply</button>
+    <button id="apply-promo-btn">Apply Promo</button>
     <p id="promo-message" aria-live="polite"></p>
-    <button id="checkout-btn" disabled>Pay with PayPal</button>
-    <button id="close-cart-btn">Close Cart</button>
+
+    <form id="shipping-form" aria-label="Shipping Address Form" novalidate>
+      <h4>Shipping Address</h4>
+      <label for="full-name">Full Name</label>
+      <input type="text" id="full-name" name="fullName" placeholder="John Doe" required />
+      <label for="address-line1">Address Line 1</label>
+      <input type="text" id="address-line1" name="addressLine1" placeholder="123 Main St" required />
+      <label for="address-line2">Address Line 2</label>
+      <input type="text" id="address-line2" name="addressLine2" placeholder="Apartment, suite, etc. (optional)" />
+      <label for="city">City</label>
+      <input type="text" id="city" name="city" placeholder="Anytown" required />
+      <label for="state">State/Province</label>
+      <input type="text" id="state" name="state" placeholder="CA" required />
+      <label for="zip">Zip/Postal Code</label>
+      <input type="text" id="zip" name="zip" placeholder="90210" required />
+      <label for="country">Country</label>
+      <input type="text" id="country" name="country" placeholder="USA" required />
+    </form>
+
+    <div style="margin-top: 1rem; display: flex; flex-direction: column; gap: 0.5rem;">
+      <button id="paypal-btn" style="background-color:#b22222; color:#121212; font-weight:700;">Pay with PayPal</button>
+      <button id="cashapp-btn" style="background-color:#00c244; color:#fff; font-weight:700;">Pay with CashApp</button>
+      <button id="applepay-btn" style="background-color:#000; color:#fff; font-weight:700;">Pay with Apple Pay</button>
+    </div>
+
+    <button id="close-cart-btn" style="margin-top:1rem;">Close Cart</button>
   </section>
 
-  <!-- Overlay background -->
   <div id="cart-overlay" tabindex="-1" aria-hidden="true"></div>
 </main>
 
 <footer>
-  <p>&copy; 2025 Wicked Ass Guitars. All rights reserved.</p>
-  <p>Contact us: <a href="mailto:contact@wickedassguitars.com">contact@wickedassguitars.com</a></p>
+  <p>&copy; 2025 Wicked Ass Auditory. All rights reserved.</p>
+  <p>Contact us: <a href="mailto:contact@wickedassauditory.com">contact@wickedassauditory.com</a></p>
 </footer>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-analytics.js";
-
   import {
     getAuth,
     onAuthStateChanged,
@@ -258,7 +301,6 @@
     createUserWithEmailAndPassword,
     signOut
   } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-auth.js";
-
   import {
     getFirestore,
     doc,
@@ -266,7 +308,6 @@
     setDoc
   } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-firestore.js";
 
-  // Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyDb5U0bC3q1zh0vwnElcF-ao7UJz9qkFhQ",
     authDomain: "wickedassguitar.firebaseapp.com",
@@ -277,19 +318,15 @@
     measurementId: "G-752ZH1X1BR"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
   const auth = getAuth(app);
   const db = getFirestore(app);
 
-  // DOM elements
   const productsList = document.getElementById("products-list");
   const cartSection = document.getElementById("cart-section");
   const cartItemsDiv = document.getElementById("cart-items");
   const cartTotalSpan = document.getElementById("cart-total");
-  const checkoutBtn = document.getElementById("checkout-btn");
-  const cartCountSpan = document.getElementById("cart-count");
 
   const userInfoDiv = document.getElementById("user-info");
   const userEmailSpan = document.getElementById("user-email");
@@ -302,17 +339,25 @@
   const authMessageP = document.getElementById("auth-message");
 
   const cartLink = document.getElementById("cart-link");
+  const cartCountSpan = document.getElementById("cart-count");
+
   const promoCodeInput = document.getElementById("promo-code-input");
   const applyPromoBtn = document.getElementById("apply-promo-btn");
   const promoMessage = document.getElementById("promo-message");
+
   const closeCartBtn = document.getElementById("close-cart-btn");
   const cartOverlay = document.getElementById("cart-overlay");
+
+  const paypalBtn = document.getElementById("paypal-btn");
+  const cashappBtn = document.getElementById("cashapp-btn");
+  const applePayBtn = document.getElementById("applepay-btn");
+
+  const shippingForm = document.getElementById("shipping-form");
 
   let currentUser = null;
   let cart = [];
   let appliedDiscount = 0;
 
-  // Product data
   const products = [
     {id: 1, name: "Electric Guitar", price: 799, image: "images/guitar1.jpg"},
     {id: 2, name: "Guitar Amplifier", price: 299, image: "images/amp1.jpg"},
@@ -324,7 +369,7 @@
     {id: 8, name: "Amp Headphone", price: 89, image: "images/headphone1.jpg"}
   ];
 
-  // Render products
+  // Renders the product list on the shop page
   function renderProducts() {
     productsList.innerHTML = "";
     products.forEach(product => {
@@ -376,32 +421,31 @@
     updateCartCount();
   }
 
-  // Update cart count in nav
+  // Updates the cart count in header nav
   function updateCartCount() {
     const totalCount = cart.reduce((acc, item) => acc + item.quantity, 0);
     cartCountSpan.textContent = totalCount;
   }
 
-  // Render cart items and total
+  // Renders the cart items inside the modal
   function renderCart() {
     cartItemsDiv.innerHTML = "";
     if (cart.length === 0) {
-      cartItemsDiv.textContent = "Your cart is empty.";
-      checkoutBtn.disabled = true;
+      cartItemsDiv.innerHTML = "<p>Your cart is empty.</p>";
       cartTotalSpan.textContent = "0.00";
-      promoMessage.textContent = "";
-      appliedDiscount = 0;
       return;
     }
-    checkoutBtn.disabled = false;
     let total = 0;
     cart.forEach(item => {
-      total += item.price * item.quantity;
+      const product = products.find(p => p.id === item.id);
+      if (!product) return;
+      total += product.price * item.quantity;
       const div = document.createElement("div");
       div.className = "cart-item";
       div.innerHTML = `
-        <span>${item.name} (x${item.quantity}) - $${(item.price * item.quantity).toFixed(2)}</span>
-        <button data-id="${item.id}" aria-label="Remove ${item.name} from cart">×</button>
+        <span>${product.name} x${item.quantity}</span>
+        <span>$${(product.price * item.quantity).toFixed(2)}</span>
+        <button data-id="${item.id}" aria-label="Remove ${product.name} from cart">&times;</button>
       `;
       cartItemsDiv.appendChild(div);
     });
@@ -409,93 +453,55 @@
     cartTotalSpan.textContent = discountedTotal.toFixed(2);
   }
 
-  // Add product to cart
-  function addToCart(productId) {
-    const product = products.find(p => p.id === productId);
-    if (!product) return;
-    const cartItem = cart.find(item => item.id === productId);
-    if (cartItem) {
-      cartItem.quantity++;
+  // Adds a product to the cart (or increases quantity)
+  function addToCart(id) {
+    const found = cart.find(item => item.id === id);
+    if (found) {
+      found.quantity++;
     } else {
-      cart.push({id: product.id, name: product.name, price: product.price, quantity: 1});
+      cart.push({id, quantity: 1});
     }
     saveCart();
-    alert(`${product.name} added to cart!`);
+    renderCart();
   }
 
   // Remove item from cart
-  function removeFromCart(productId) {
-    const index = cart.findIndex(item => item.id === productId);
-    if (index > -1) {
-      cart.splice(index, 1);
-      saveCart();
-      renderCart();
-    }
+  function removeFromCart(id) {
+    cart = cart.filter(item => item.id !== id);
+    saveCart();
+    renderCart();
   }
 
-  // Open cart modal & overlay
+  // Open the cart modal and overlay
   function openCart() {
     renderCart();
-    cartSection.classList.remove("hidden");
+    promoMessage.textContent = "";
+    appliedDiscount = 0;
+    promoCodeInput.value = "";
+    cartSection.style.display = "block";
     cartOverlay.style.display = "block";
     cartSection.focus();
-    cartOverlay.setAttribute("aria-hidden", "false");
   }
 
-  // Close cart modal & overlay
+  // Close the cart modal and overlay
   function closeCart() {
-    cartSection.classList.add("hidden");
+    cartSection.style.display = "none";
     cartOverlay.style.display = "none";
-    cartOverlay.setAttribute("aria-hidden", "true");
   }
 
-  // Handle auth state changes
-  onAuthStateChanged(auth, async (user) => {
-    currentUser = user;
-    if (user) {
-      userInfoDiv.style.display = "block";
-      loginFormDiv.style.display = "none";
-      userEmailSpan.textContent = user.email;
-      await loadCart();
-      renderCart();
-    } else {
-      userInfoDiv.style.display = "none";
-      loginFormDiv.style.display = "block";
-      cart = [];
-      updateCartCount();
-      cartItemsDiv.textContent = "";
-      cartTotalSpan.textContent = "0.00";
-      promoMessage.textContent = "";
-      appliedDiscount = 0;
-    }
-  });
+  // Validate shipping address form, returns boolean
+  function validateShippingForm() {
+    const form = shippingForm;
+    if (!form["fullName"].value.trim()) return false;
+    if (!form["addressLine1"].value.trim()) return false;
+    if (!form["city"].value.trim()) return false;
+    if (!form["state"].value.trim()) return false;
+    if (!form["zip"].value.trim()) return false;
+    if (!form["country"].value.trim()) return false;
+    return true;
+  }
 
-  // Login button
-  loginBtn.addEventListener("click", async () => {
-    try {
-      await signInWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value.trim());
-      authMessageP.textContent = "";
-    } catch (err) {
-      authMessageP.textContent = err.message;
-    }
-  });
-
-  // Sign up button
-  signupBtn.addEventListener("click", async () => {
-    try {
-      await createUserWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value.trim());
-      authMessageP.textContent = "";
-    } catch (err) {
-      authMessageP.textContent = err.message;
-    }
-  });
-
-  // Logout button
-  logoutBtn.addEventListener("click", () => {
-    signOut(auth);
-  });
-
-  // Add to cart buttons on products
+  // Event listeners
   productsList.addEventListener("click", e => {
     if (e.target.tagName === "BUTTON") {
       const id = Number(e.target.getAttribute("data-id"));
@@ -503,7 +509,6 @@
     }
   });
 
-  // Remove items from cart
   cartItemsDiv.addEventListener("click", e => {
     if (e.target.tagName === "BUTTON") {
       const id = Number(e.target.getAttribute("data-id"));
@@ -511,27 +516,21 @@
     }
   });
 
-  // Cart link click opens modal
   cartLink.addEventListener("click", e => {
     e.preventDefault();
     openCart();
   });
 
-  // Close cart button
   closeCartBtn.addEventListener("click", closeCart);
-
-  // Clicking outside the cart closes it
   cartOverlay.addEventListener("click", closeCart);
-
-  // Promo codes and discounts
-  const promos = {
-    rock10: 0.10,
-    amp20: 0.20,
-    guitar5: 0.05
-  };
 
   applyPromoBtn.addEventListener("click", () => {
     const code = promoCodeInput.value.trim().toLowerCase();
+    const promos = {
+      rock10: 0.10,
+      amp20: 0.20,
+      guitar5: 0.05
+    };
     if (promos[code]) {
       appliedDiscount = promos[code];
       promoMessage.textContent = `Promo code applied! You saved ${(appliedDiscount * 100).toFixed(0)}%.`;
@@ -543,20 +542,90 @@
     }
   });
 
-  // Checkout button opens PayPal with discounted amount
-  checkoutBtn.addEventListener("click", () => {
-    if (cart.length === 0) return;
-    const total = cart.reduce((acc, item) => acc + item.price * item.quantity, 0);
-    const discountedTotal = total * (1 - appliedDiscount);
-    const paypalEmail = "YOUR_PAYPAL_EMAIL"; // <-- REPLACE THIS WITH YOUR PAYPAL EMAIL
-    const paypalURL = `https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=${encodeURIComponent(paypalEmail)}&currency_code=USD&amount=${discountedTotal.toFixed(2)}&item_name=Music Gear Purchase`;
-    window.open(paypalURL, "_blank");
+  paypalBtn.addEventListener("click", () => {
+    if (cart.length === 0) {
+      alert("Your cart is empty.");
+      return;
+    }
+    if (!validateShippingForm()) {
+      alert("Please fill in all required shipping address fields.");
+      return;
+    }
+
+    let total = 0;
+    cart.forEach(item => {
+      const product = products.find(p => p.id === item.id);
+      if (product) total += product.price * item.quantity;
+    });
+    let discountedTotal = total * (1 - appliedDiscount);
+
+    // Build PayPal URL
+    const paypalUrl = new URL("https://www.paypal.com/cgi-bin/webscr");
+    paypalUrl.searchParams.set("cmd", "_xclick");
+    paypalUrl.searchParams.set("business", "YOUR_PAYPAL_EMAIL"); // REPLACE HERE
+    paypalUrl.searchParams.set("currency_code", "USD");
+    paypalUrl.searchParams.set("amount", discountedTotal.toFixed(2));
+    paypalUrl.searchParams.set("item_name", "Wicked Ass Auditory Order");
+
+    // Append shipping info as custom fields (optional, limited length)
+    const shippingInfo = `${shippingForm["fullName"].value}, ${shippingForm["addressLine1"].value}, ${shippingForm["addressLine2"].value}, ${shippingForm["city"].value}, ${shippingForm["state"].value}, ${shippingForm["zip"].value}, ${shippingForm["country"].value}`;
+    paypalUrl.searchParams.set("custom", shippingInfo);
+
+    window.open(paypalUrl.toString(), "_blank");
   });
 
-  // Initial setup
+  cashappBtn.addEventListener("click", () => {
+    // Replace with your CashApp payment link
+    const cashAppLink = "https://cash.app/$YourCashtag"; // REPLACE HERE
+    window.open(cashAppLink, "_blank");
+  });
+
+  applePayBtn.addEventListener("click", () => {
+    alert("Apple Pay integration requires HTTPS and a payment processor. This is a placeholder.");
+  });
+
+  // Firebase Auth handlers
+  loginBtn.addEventListener("click", async () => {
+    authMessageP.textContent = "";
+    try {
+      await signInWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
+    } catch (error) {
+      authMessageP.textContent = "Login failed: " + error.message;
+    }
+  });
+
+  signupBtn.addEventListener("click", async () => {
+    authMessageP.textContent = "";
+    try {
+      await createUserWithEmailAndPassword(auth, emailInput.value, passwordInput.value);
+    } catch (error) {
+      authMessageP.textContent = "Signup failed: " + error.message;
+    }
+  });
+
+  logoutBtn.addEventListener("click", () => {
+    signOut(auth);
+  });
+
+  onAuthStateChanged(auth, user => {
+    currentUser = user;
+    if (user) {
+      userInfoDiv.style.display = "block";
+      loginFormDiv.style.display = "none";
+      userEmailSpan.textContent = user.email;
+      loadCart().then(() => renderCart());
+    } else {
+      userInfoDiv.style.display = "none";
+      loginFormDiv.style.display = "block";
+      cart = [];
+      saveCart();
+      renderCart();
+    }
+  });
+
+  // Initial rendering
   renderProducts();
   loadCart();
-
 </script>
 
 </body>
