--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
   cashappBtn.addEventListener("click", () => {
     // Replace with your CashApp payment link
-    const cashAppLink = "https://cash.app/$YourCashtag"; // REPLACE HERE
+    const cashAppLink = "https://cash.app/$DevinSlifer0"; // REPLACE HERE
     window.open(cashAppLink, "_blank");
   });
 
